--- a/Password Vault/PVTrackMapViewController.xib
+++ b/Password Vault/PVTrackMapViewController.xib
@@ -37,28 +37,26 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBMKMapView" id="223471858">
+					<object class="IBMKMapView" id="260218994">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="676987778">
+					<object class="IBUIView" id="1027026327">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIButton" id="338017063">
-								<reference key="NSNextResponder" ref="676987778"/>
+							<object class="IBUIButton" id="245099259">
+								<reference key="NSNextResponder" ref="1027026327"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 44}</string>
-								<reference key="NSSuperview" ref="676987778"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="700560417"/>
+								<reference key="NSSuperview" ref="1027026327"/>
+								<reference key="NSNextKeyView" ref="151237187"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -88,13 +86,11 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUITableView" id="700560417">
-								<reference key="NSNextResponder" ref="676987778"/>
+							<object class="IBUITableView" id="151237187">
+								<reference key="NSNextResponder" ref="1027026327"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 51}, {320, 365}}</string>
-								<reference key="NSSuperview" ref="676987778"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSSuperview" ref="1027026327"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="7260385"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -110,8 +106,7 @@
 						</array>
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="338017063"/>
+						<reference key="NSNextKeyView" ref="245099259"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -125,8 +120,7 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="676987778"/>
+				<reference key="NSNextKeyView" ref="1027026327"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -162,7 +156,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">_selectView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="676987778"/>
+						<reference key="destination" ref="1027026327"/>
 					</object>
 					<int key="connectionID">22</int>
 				</object>
@@ -170,7 +164,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">myTableView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="700560417"/>
+						<reference key="destination" ref="151237187"/>
 					</object>
 					<int key="connectionID">23</int>
 				</object>
@@ -178,7 +172,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">finishBtn</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="338017063"/>
+						<reference key="destination" ref="245099259"/>
 					</object>
 					<int key="connectionID">24</int>
 				</object>
@@ -186,7 +180,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">_mapView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="223471858"/>
+						<reference key="destination" ref="260218994"/>
 					</object>
 					<int key="connectionID">26</int>
 				</object>
@@ -199,9 +193,18 @@
 					<int key="connectionID">29</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">getSelectedUsers:</string>
+						<reference key="source" ref="245099259"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
-						<reference key="source" ref="700560417"/>
+						<reference key="source" ref="151237187"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">27</int>
@@ -209,10 +212,18 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="700560417"/>
+						<reference key="source" ref="151237187"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">28</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="260218994"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">32</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -238,33 +249,33 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="676987778"/>
-							<reference ref="223471858"/>
+							<reference ref="1027026327"/>
+							<reference ref="260218994"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">18</int>
-						<reference key="object" ref="676987778"/>
+						<reference key="object" ref="1027026327"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="338017063"/>
-							<reference ref="700560417"/>
+							<reference ref="245099259"/>
+							<reference ref="151237187"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
-						<reference key="object" ref="338017063"/>
-						<reference key="parent" ref="676987778"/>
+						<reference key="object" ref="245099259"/>
+						<reference key="parent" ref="1027026327"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">21</int>
-						<reference key="object" ref="700560417"/>
-						<reference key="parent" ref="676987778"/>
+						<reference key="object" ref="151237187"/>
+						<reference key="parent" ref="1027026327"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">25</int>
-						<reference key="object" ref="223471858"/>
+						<reference key="object" ref="260218994"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -284,44 +295,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">29</int>
+			<int key="maxID">32</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PVTrackMapViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="_mapView">MKMapView</string>
-						<string key="_selectView">UIView</string>
-						<string key="finishBtn">UIButton</string>
-						<string key="myTableView">UITableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="_mapView">
-							<string key="name">_mapView</string>
-							<string key="candidateClassName">MKMapView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="_selectView">
-							<string key="name">_selectView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="finishBtn">
-							<string key="name">finishBtn</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="myTableView">
-							<string key="name">myTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PVTrackMapViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
